# nsu-opp

lab1_opp/: CMakeLists.txt
lab1_opp/src/: main.cpp  mathsource.cpp  mathsource.h  source.cpp  source.h  test.cpp
lab2_opp/: CMakeLists.txt
lab2_opp/src/: file.cpp  file.h  main.cpp  mathsolver.cpp  matrix.cpp  test_main.cpp  vector.cpp
lab2_opp_parallel/: CMakeLists.txt
lab2_opp_parallel/src/: main.cpp  mathsolver.cpp  mathsolver.h  mathsolver0.cpp  mathsolver2.cpp  matrix.cpp  test_main.cpp  test_par.cpp  vector.cpp  vector.h
lab2_parallel_v2/: CMakeLists.txt
lab2_parallel_v2/src/: mathsolver.h  mathsolver2.cpp  matrix.cpp  matrix.h  test_parallel.cpp  vector.cpp  vector.h
lab3_opp/: CMakeLists.txt
lab3_opp/src/: file.h  main.cpp  mathsource.cpp  mathsource.h  mpisource.cpp  mpisource.h  source.cpp  source.h  test.cpp
lab3_v2/: CMakeLists.txt
lab3_v2/src/: file.cpp  main.cpp  mathsource.cpp  mathsource.h  mpisource.cpp  mpisource.h
lab4_opp_v2/: CMakeLists.txt
lab4_opp_v2/src/: main.cpp  mpisource.cpp  mpisource.h  source.cpp  source.h
lab5_opp/: CMakeLists.txt
lab5_opp/src/: main.cpp  source.h
lab5_opp_v2/: CMakeLists.txt
lab5_opp_v2/src/: main.cpp  source.h
quicksort_lab2-5/: CMakeLists.txt
quicksort_lab2-5/src/: main_test.cpp
quicksort_lab2-5/src/CSV/: csv.cpp  csv.h
quicksort_lab2-5/src/File/: file.cpp  file.h
quicksort_lab2-5/src/Parallel/: main_parallel.cpp  sort_parallel.h
quicksort_lab2-5/src/Single/: main.cpp  sort.h
quicksort_lab2-5/src/Tester/: checker.cpp  generator.cpp  test.h
testerLab3/: CMakeLists.txt
testerLab3/matrixMultiply/: main.cpp  mathsource.cpp  mathsource.h  source.cpp  source.h
testerLab3/matrix_generator/: generator.cpp
testerLab3/src/: file.cpp  source.cpp
testerLab3/tester/: tester.cpp
